Version 1.3.0 Release - Added final button to view created icns file.