@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
     <artifactId>MacIcns</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
@@ -52,7 +52,6 @@
                 <configuration>
                     <source>20</source>
                     <target>20</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <!--Maven Versions Plugin-->
@@ -124,9 +123,6 @@
                             <outputDirectory>./target/PACKAGES/Mac</outputDirectory>
                             <createZipball>false</createZipball>
                             <createTarball>false</createTarball>
-                            <vmArgs>
-                                <vmArg>--enable-preview</vmArg>
-                            </vmArgs>
                             <macConfig>
                                 <volumeIcon>/Users/michael/JetBrainsProjects/IntelliJIdea/MacIcns/img/Logo.png</volumeIcon>
                                 <icnsFile>/Users/michael/JetBrainsProjects/IntelliJIdea/MacIcns/assets/mac/Logo.icns</icnsFile>
